style.css
:root {
    /* found below color scheme, saved in variables for reference */
    --first-color: #f0ece2;
    --second-color: #dfd3c3;
    --third-color: #c7b198;
    --fourth-color: #596e79;
}

body {
    margin: 0; 
}

header {
    display: flex;
    justify-content: center;
    background-color: var(--first-color);
}

#form-container {
    display: flex;
    flex-direction: column;
    margin-left: 2rem;
    margin-bottom: 5rem;
}

input {
    height: 20px;
    border: 1px solid black;
}

#submit-container {
    display: flex;
    width: 772px;
    justify-content: flex-end;
}

#submit-button {
    margin-top: 1.5rem;
    width: 100px;
    height: 30px;
    border: 1.5px solid black;
    border-radius: 5px;
    font-size: 18px;
}

th {
    background-color: var(--second-color);
    width: 160px;
    height: 50px;
    padding-left: 5px;
    text-align: left;
    font-size: 20px;
    font-weight: 400; /*This is the average font-weight*/
}

#table-container {
    margin-left: 2rem;
}

/* need to actually make it align with table, not just bottom of page */
#total-cost {
    position: absolute;
    right: 10rem;
}

